Config project and add primeflex

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,2 @@
-<div class="text-layout">
-  <h1>{{nombre | titlecase}}</h1>
-  <h1>{{valor | percent}}</h1>
-  <h1>{{obj | json}}</h1>
-</div>
-<button 
-  pButton 
-  class="p-button-help" 
-  label="Click" 
-  icon="pi pi-bell" 
-  iconPos="right" 
-  (click)="mostrarNombre()">
-</button>
-<hr>
-<p-card>
-  <ng-template pTemplate="title">
-      Esto es el header
-  </ng-template>
-  esto es el contenido, Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-  A rem harum expedita voluptatem laboriosam aspernatur, 
-  maiores laudantium ipsam! Nisi quo,
-   ab omnis voluptate ratione assumenda atque magnam voluptatibus reprehenderit optio.
-</p-card>
-<hr>
-<p-card
-  [header]="nombre | titlecase"
-  subheader="es la bomBa!">
-
-  esto es el contenido, Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-  A rem harum expedita voluptatem laboriosam aspernatur, 
-  maiores laudantium ipsam! Nisi quo,
-   ab omnis voluptate ratione assumenda atque magnam voluptatibus reprehenderit optio.
-</p-card>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
