--- a/src/app/ventas/pages/basicos/basicos.component.html
+++ b/src/app/ventas/pages/basicos/basicos.component.html
@@ -6,13 +6,64 @@
 </div>
 
 <div class="grid">
-    <div class="col-4">
-        <p-card header="uppercase"></p-card>
+    <div class="col-12 md:col-4">
+        <p-card header="uppercase" [subheader]="nombreLower | uppercase">
+            {{nombreLower | uppercase}}
+        </p-card>
     </div>
-    <div class="col-4">
-        Hola q ase
+    <div class="col-12 md:col-4">
+        <p-card header="lowercase" [subheader]="nombreUpper | lowercase">
+            {{nombreLower | lowercase}}
+        </p-card>
     </div>
-    <div class="col-4">
-        Hola q ase
+    <div class="col-12 md:col-4">
+        <p-card header="titleCase" [subheader]="nombreCompleto | titlecase">
+            {{nombreCompleto | titlecase}}
+        </p-card>
+    </div>
+</div>
+
+<div class="text-layout">
+    <h1>Date Pipe | Fecha</h1>
+    <p>
+        Pipe para el manejo de fechas
+    </p>
+</div>
+<div class="grid">
+    <div class="col-12 sm:col-6">
+        <p-card>
+            <ul>
+                <li> Fecha </li>
+                <li> Fecha | date </li>
+                <li> Fecha | date: 'short' </li>
+                <li> Fecha | date: 'long' </li>
+                <li> Fecha | date: 'custom - dd/MM/yyyy' </li>
+                <li> Fecha | date: 'custom - dd/MM/yyyy EEEE dd MMMM yyyy' </li>
+            </ul>
+            <hr>
+            <ul>
+                <li> Fecha | date: 'custom - GMT-5' </li>
+                <li> Fecha | date: 'custom - GMT-2' </li>
+                <li> Fecha | date: 'custom - LOCALE FR' </li>
+            </ul>
+        </p-card>
+    </div>
+    <div class="col-12 sm:col-6">
+        <p-card>
+            <ul>
+                <li> {{fecha}} </li>
+                <li> {{fecha | date}} </li>
+                <li> {{fecha | date: 'short'}} </li>
+                <li> {{fecha | date: 'long'}} </li>
+                <li> {{fecha | date: 'dd/MM/yyyy'}} </li>
+                <li> {{fecha | date: 'dd/MM/yyyy EEEE dd MMMM yyyy'}} </li>
+            </ul>
+            <hr>
+            <ul>
+                <li> {{fecha | date: 'long':'GMT-5'}} </li>
+                <li> {{fecha | date: 'long':'GMT-2'}} </li>
+                <li> {{fecha | date: 'long':'':'fr'}} </li>
+            </ul>
+        </p-card>
     </div>
 </div>
