--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div class="grid">
-    <div class="col">
+    <div class="col-12 md:col-6">
         <p-fieldset legend="I18nSelect Pipe" [toggleable]="true">
             <p>
                 Saludos {{personaActual.nombre}} es un placer
@@ -19,11 +19,12 @@
                 {{ personaje.genero | i18nSelect:invitacionMapa}}
                 a nuestro evento.
             </p>
-            <button pButton pRipple type="button" label="click!" [icon]="iconPersona" (click)="cambiarGenero()" class="p-button-rounded p-button-info p-button-outlined"></button>
-            
+            <button pButton pRipple type="button" label="click!" [icon]="iconPersona" (click)="cambiarGenero()"
+                class="p-button-rounded p-button-info p-button-outlined"></button>
+
         </p-fieldset>
     </div>
-    <div class="col">
+    <div class="col-12 md:col-6">
         <p-fieldset legend="I18nPlural Pipe" [toggleable]="true">
             <p>
                 Actualmente tenemos {{clientesSingular.length | i18nPlural:clientesMapa}}.
@@ -31,7 +32,51 @@
             <p>
                 Actualmente tenemos {{clientesPlural.length | i18nPlural:clientesMapa}}.
             </p>
-            <p-button label="Clientes" [icon]="iconUsers" styleClass="p-button-info" (onClick)="quitarClientes()" [badge]="badge.toString()" badgeClass="p-badge-help"></p-button>
+            <p-button label="Clientes" [icon]="iconUsers" styleClass="p-button-info" (onClick)="quitarClientes()"
+                [badge]="badge.toString()" badgeClass="p-badge-help"></p-button>
         </p-fieldset>
+    </div>
+    <div class="col-12 md:col-6">
+        <p-fieldset legend="Slice - Pipe" [toggleable]="true">
+            <b>Original</b>
+            <pre>{{clientesPlural}}</pre>
+            <b>slice:0 - clicka en el botón clientes</b>
+            <pre>{{clientesPlural | slice:0}}</pre>  <!-- así lo hacemos reactivo -->
+            <b>slice:1:2 - recortamos el arreglo</b>
+            <pre>{{clientesPlural | slice:1:2}}</pre>
+            <b>slice:1:3 - recortamos el arreglo</b>
+            <pre>{{clientesPlural | slice:1:3}}</pre>
+        </p-fieldset>
+    </div>
+    <div class="col-12 md:col-6">
+        <p-fieldset legend="Json - Pipe" [toggleable]="true">
+            <pre>
+                {{pedro | json}}
+            </pre>
+            <hr>
+            <pre>
+                {{clientesPlural | json}}
+            </pre>
+        </p-fieldset>
+    </div>
+    <div class="col-12 md:col-6">
+        <p-fieldset legend="KeyValue - Pipe" [toggleable]="true">
+            <ul>
+                <li *ngFor="let item of keyValuePersona | keyvalue">
+                    {{item.key | titlecase}} -> {{item.value}} <!-- Este método de reflexión no soporta opcionales-->
+                </li>
+            </ul>
+        </p-fieldset>       
+    </div>
+    <div class="col-12 md:col-6">
+        <p-fieldset legend="Async - Pipe" [toggleable]="true">
+            <pre>
+                {{miObservable | async}}
+            </pre>
+            <pre>
+                <span *ngIf="!(promesa | async)">Cargando data....</span>
+                {{promesa | async}}
+            </pre>
+        </p-fieldset>       
     </div>
 </div>
