add sortable tables

--- a/src/app/ventas/pages/no-comunes/no-comunes.component.html
+++ b/src/app/ventas/pages/no-comunes/no-comunes.component.html
@@ -75,6 +75,7 @@
             </pre>
             <pre>
                 <span *ngIf="!(promesa | async)">Cargando data....</span>
+                <!-- ponemos la negacióon con parentesis pq sino sería la negación de la promesa -->
                 {{promesa | async}}
             </pre>
         </p-fieldset>       
