--- a/src/app/ventas/pages/ordenar/ordenar.component.html
+++ b/src/app/ventas/pages/ordenar/ordenar.component.html
@@ -1,1 +1,94 @@
-<p>ordenar works!</p>
+<div class="text-layout">
+    <h1>Pipes personalizados</h1>
+    <p>
+        Pipes creados por {{'nosotros' | mayusculas:enMayusculas }}
+    </p>
+    
+</div>
+<br>
+<hr>    
+<br>
+<p-toolbar>
+    <div class="p-toolbar-group-left">
+        <button pButton pRipple type="button" label="" [icon]="cambiaIcon" (click)="cambiaMayusculas()"
+        class="p-button-rounded p-button-info p-button-outlined"></button>
+    </div>
+    
+    <div class="p-toolbar-group-right">
+        <button pButton pRipple
+                icon="pi pi-sort"
+                label="Por nombre"
+                class="mr-3 p-button-info p-button-outlined"
+                (click)="cambiarOrden('nombre')"
+        >
+        </button>
+        <button pButton pRipple
+                icon="pi pi-sort"
+                label="Vuela"
+                class="mr-3 p-button-success p-button-outlined"
+                (click)="cambiarOrden('vuela')"
+        >
+        </button>
+        <button pButton pRipple
+                icon="pi pi-sort"
+                label="Colores"
+                class="mr-1 p-button-danger p-button-outlined"
+                (click)="cambiarOrden('color')"
+        >
+        </button>
+    </div>
+</p-toolbar>
+<br>
+<div class="grid">
+    <div class="col">
+        <p-table [value]="heroes | ordenar:orderBy">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>Nombre</th>
+                    <th [ngStyle]="{'text-align': 'center' }">Vuela</th>
+                    <th [ngStyle]="{'text-align': 'center' }">Color</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>
+                        {{heroe.nombre}}
+                    </td>
+                    <td  [ngStyle]="{'text-align': 'center' }" >
+                        <i [class]="heroe.vuela | vuela"></i>
+                    </td>
+                    <td [ngStyle]="{'text-align': 'center' }">
+                        {{heroe.color}}
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
+<br>
+<div class="grid">
+    <div class="col">
+        <p-table [value]="heroes">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th pSortableColumn="nombre">Nombre<p-sortIcon field="nombre"></p-sortIcon></th>
+                    <th  pSortableColumn="vuela" [ngStyle]="{'text-align': 'center' }">Vuela<p-sortIcon field="vuela"></p-sortIcon></th>
+                    <th  pSortableColumn="color" [ngStyle]="{'text-align': 'center' }">Color<p-sortIcon field="color"></p-sortIcon></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-heroe>
+                <tr>
+                    <td>
+                        {{heroe.nombre}}
+                    </td>
+                    <td  [ngStyle]="{'text-align': 'center' }" >
+                        <i [class]="heroe.vuela | vuela"></i>
+                    </td>
+                    <td [ngStyle]="{'text-align': 'center' }">
+                        {{heroe.color}}
+                    </td>
+                </tr>
+            </ng-template>
+        </p-table>
+    </div>
+</div>
