add switcher for dual dark/light theme

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,3 +1,7 @@
 <p-menubar [model]="items">
-    <img src="./favicon.ico" alt=""/>
+    <ng-template pTemplate="end">
+        <p-inputSwitch class="mr-3" (onChange)="clickBonusChecked($event)" onLabel="yes" offLabel="no">
+        </p-inputSwitch>
+        <img src="./favicon.ico" alt="" />
+    </ng-template>
 </p-menubar>
